infrastructure/postgres/pgadmin4/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin4
  labels:
    app: pgadmin4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin4
  template:
    metadata:
      labels:
        app: pgadmin4
    spec:
      containers:
      - name: pgadmin4
        image: dpage/pgadmin4:8.8
        ports:
          - containerPort: 80
            name: http
            protocol: TCP
        volumeMounts:
        - name: pgadmin-storage
          mountPath: /var/lib/pgadmin
      volumes:
      - name: pgadmin-storage
        persistentVolumeClaim:
          claimName: longhorn-pvc
