infrastructure/postgres/pgadmin4/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin4
  labels:
    app.kubernetes.io/service: pgadmin4
    app.kubernetes.io/instance: pgadmin4
    app.kubernetes.io/name: pgadmin4
    app.kubernetes.io/version: 8.8
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: pgadmin4
